# fusabi

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  justfile  test_float.fsx  test_list.fsx  test_map.fsx
.claude/: project.json
.github/: CODEOWNERS
assets/: README.md  icon.ico.md  social_preview.png.md
docs/: 01-overview.md  02-language-spec.md  03-vm-design.md  ABI.md  BRANDING.md  CLAUDE_CODE_NOTES.md  FABLE_COMPARISON.md  OMAKASE.md  RELEASE.md  SECURITY.md  SETUP.md  STDLIB_REFERENCE.md  STRUCTURE.md  bytecode-format-update.md  host_interop_demo.md  issue-025-status.md  module_system.md  roadmap.md  testing.md
examples/: README.md  async_demo.fsx  async_tokio_demo.fsx  host_interop_demo.rs  repro_issue_83.fsx  (+4 more)
examples/bevy_scripting/: Cargo.toml
examples/web_server/: Cargo.toml
rust/crates/fusabi-vm/: Cargo.toml
rust/crates/fusabi-vm/benches/: dispatch_bench.rs  vm_benchmarks.rs
rust/crates/fusabi-vm/src/: async_runtime.rs  async_types.rs  chunk.rs  closure.rs  conversions.rs  error_reporter.rs  gc.rs  host.rs  instruction.rs  lib.rs  optimized_vm.rs  optimizer.rs  value.rs  vm.rs
rust/crates/fusabi-vm/src/stdlib/: async_ops.rs  events.rs  json.rs  list.rs  map.rs  math.rs  mod.rs  navigation.rs  option.rs  print.rs  process.rs  script.rs  sqlite.rs  string.rs  terminal_control.rs  terminal_info.rs  time.rs  ui_formatting.rs
rust/crates/fusabi-vm/src/stdlib/net/: osc.rs
rust/crates/fusabi-vm/tests/: host_reentrant.rs  test_host_interop.rs  test_method_dispatch.rs  test_placeholder.rs  test_serialization.rs  test_stdlib.rs
(+181 files in other folders)
