[package]
name = "web-server-example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
fusabi = { path = "../../rust/crates/fusabi" }
fusabi-vm = { path = "../../rust/crates/fusabi-vm" }
fusabi-frontend = { path = "../../rust/crates/fusabi-frontend" }

[[bin]]
name = "web_server"
path = "src/main.rs"