[package]
name = "fusabi-vm"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = []
serde = ["dep:serde", "dep:bincode"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = { version = "1.3", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
